Version 1.3.12
 Add:
  - Add an option to show / hide "Args" parameter [BUG-114];
 Fixed:
  - Fix parsing of env causing issues with wine kill [BUG-143];

Version 1.3.11
 Fixed:
  - Display of Valve Proton in Processes view [BUG-138];
  - Improve all dialogs of choosing files [BUG-139];
  - Allow Stop Wine action to kill Valve Proton in Processes view [BUG-138];
 Updated:
  - Code cleanup: drop Qt4 support;

Version 1.3.10
 Fixed:
  - cppcheck: Uninitialized struct member: item.provider_id;

 Add:
  - cleanup.sh: to get rid of all non-release stuff;

Version 1.3.9
 Fixed:
  - Fixed build with Qt >= 5.11 [BUG-125];
  - Error: wrong or broken XML data. Try again later. [BUG-132]

 Added:
  - Custom virtual desktop resolution size [BUG-131];

Version 1.3.8
 Updated:
  - gui_sudo missing in Ubuntu 18.04 [BUG-120];

 Fixed:
  - winetricks: Proxy settings are used even if proxy type set to 'none';

Version 1.3.7
 Updated:
  - Wine stock icons to be organised through Q4Wine [BUG-117];
  - Add gnome-terminal into terminal detection logic [BUG-118];
 Added:
  - French translation (thx 2 seigneurfuo);

Version 1.3.6
 Updated:
  - Added indication of applications which was installed through winetricks [BUG-106][BUG-111];
  - Default Wine Desktop Integartion path settings for new prefixes [BUG-106];
  - Added option to run custom scripts with fake drive settings after creation of fake drive [BUG-106];
  - Qt5 build enabled by default;
  - Taiwan translation;
  - Russian translation;
  - Ukrainian translation;
  - Spanish translation;
  - Czech translation;
  - Bind Plus and Minus keys for Program tab for +\- zoom respectively [BUG-112];
  - Bind Plus and Minus keys for Config tab for +\- zoom respectively [BUG-112];
  - Allow to change Config and Program Icon sizes independently  [BUG-112];
 Documented:
  - q4wine prevents user from running winecfg from KRunner even after uninstalling [BUG-98];
 Fixed:
  - Static code analysis: errors and warnings [BUG-116];