@@ -116,15 +116,15 @@ in the top-level directory of the source distribution.
 The most recent
 .B public
 version of Wine can be downloaded from
-.I http://q4wine.brezblock.org.ua/download/
+.I https://q4wine.brezblock.org.ua/download/
 
 The latest snapshot of the code may be obtained via
 .B GIT
 for information on how to do this, please see
-.I http://q4wine.brezblock.org.ua/download/#git
+.I https://q4wine.brezblock.org.ua/download/#git
 
 Q4Wine, development headquarters, is at
-.I http://q4wine.brezblock.org.ua
+.I https://q4wine.brezblock.org.ua
 This website contains a great deal of information about Q4Wine.
 
 .SH "BUGS"
